Fixed settings content sticking to right side on mobile

--- a/assets/scss/settings/_content.scss
+++ b/assets/scss/settings/_content.scss
@@ -19,4 +19,8 @@
 
 .settingsContent {
 	padding: 0 15px;
+
+	> div.row {
+		margin-right: 0 !important;
+	}
 }
